<resources>
    <string name="app_name">Weather app</string>
    <string name="action_settings">Settings</string>

    <string name="settings_gps_location">Use GPS location:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="location_header">Location</string>
    <string name="temp_title">The current temperature is:</string>
    <string name="location_title">Select location</string>
    <string name="current_location">~</string>
    <string name="no_internet_error">No internet connection found</string>
    <string name="last_updated_time">"Updated at: "</string>
    <string name="no_location_error">No GPS location found</string>

</resources>