<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location_header">

        <SwitchPreferenceCompat
            app:key="use_gps_location"
            android:disableDependentsState="true"
            android:icon="@drawable/ic_baseline_gps_fixed_24"
            app:title="@string/settings_gps_location" />

        <ListPreference
            android:defaultValue="Utrecht"
            android:entries="@array/location_entries"
            android:entryValues="@array/location_values"
            android:key="list_preference_location"
            android:summary="%s"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:dependency="use_gps_location"
            android:title="@string/location_title" />

    </PreferenceCategory>

</PreferenceScreen>